prevented text overflow on calculator screen

--- a/styles.css
+++ b/styles.css
@@ -68,14 +68,21 @@ table {
 }
 
 #screen{
-	display: inline-block;
+  display: inline-block;
+  overflow: hidden;
 	text-align: left;
 	font-size: 36px;
-	line-height: 36px;
-	width: 90%;
-	margin: 20px 0;
+  line-height: 36px;
+	width: 93%;
+	margin: 20px 5px;
 	height: 100px;
 	background-color: #ffffff;
+}
+#screenValue{
+  width: auto;
+  max-width: 94%;
+  overflow: hidden;
+  display: inline-block;
 }
 
 #buttons{
